trabajoFinal/00-sync.sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sync-prod
  labels:
    run: sync-prod
spec:
  selector:
    matchLabels:
      run: sync-prod
  serviceName: "sync"
  template:
    metadata:
      generateName: sync-prod
      labels:
        run: sync-prod
    spec:
      containers:
        - name: sync-prod
          image: linuxserver/syncthing
          imagePullPolicy: Always
          ports:
            - name: sync-prod
              containerPort: 8384
          volumeMounts:
            - mountPath: "/config"
              name: syncthing-data2
  volumeClaimTemplates:
   - metadata:
       name: syncthing-data2
     spec:
       accessModes: [ "ReadWriteOnce" ]
       storageClassName: "rbd"
       resources:
         requests:
           storage: 1Gi
