trabajoFinal/01-sync-app.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sync-prod
  labels:
    run: sync-prod
spec:
  ports:
  - port: 18394
    name: sync-prod
    targetPort: 8384
  selector:
    run: sync-prod
