trabajoFinal/02-sync-app.ingress.yaml
apiVersion: v1
kind: List
items:
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
      certmanager.k8s.io/acme-challenge-type: http01
      certmanager.k8s.io/cluster-issuer: letsencrypt-prod

    name: sync-ing
  spec:
    rules:
    - host: sync-fcontigliani.kube.um.edu.ar
      http:
        paths:
        - backend:
            serviceName: sync-prod
            servicePort: 18394
          path: /
